--- a/app/views/swagger_engine/swaggers/show.html.erb
+++ b/app/views/swagger_engine/swaggers/show.html.erb
@@ -63,8 +63,9 @@
 
       function addApiKeyAuthorization(){
         var key = encodeURIComponent($('#input_apiKey')[0].value);
+        key = 'Token token="' + key + '"';
         if(key && key.trim() != "") {
-            var apiKeyAuth = new SwaggerClient.ApiKeyAuthorization("api_key", key, "query");
+            var apiKeyAuth = new SwaggerClient.ApiKeyAuthorization("Authorization", key, "header");
             window.swaggerUi.api.clientAuthorizations.add("api_key", apiKeyAuth);
             log("added key " + key);
         }
